--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.College_info{
+    position: relative;
+
+}
+
+.College_info::before{
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    right: 0;
+    background-image: url("/college4.jpg");
+    background-position: center;
+    background-size: cover;
+    opacity: 0.17;
+    box-shadow: inset -1px 190px 42px -22px rgba(255, 255, 255, 1)
+}
